force-app/main/default/objects/Invoice_Breakout__c/Invoice_Breakout__c.object-meta.xml
<CustomObject>
    <label>Invoice Breakout</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Breakouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>