force-app/main/default/objects/Invoice_Breakout__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Select the Department the budget is coming out of</inlineHelpText>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
                <default>true</default>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Sales (Regional Marketing)</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>People Operations</fullName>
            </value>
            <value>
                <fullName>Publisher Development</fullName>
            </value>
            <value>
                <fullName>Programmatic</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>All Departments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>