force-app/main/default/objects/Invoice_Breakout__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <inlineHelpText>Select the correct entity from where the budget is coming from</inlineHelpText>
    <label>Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GumGum, Inc</fullName>
                <default>true</default>
                <label>GumGum, Inc</label>
            </value>
            <value>
                <fullName>GumGum UK Ltd</fullName>
            </value>
            <value>
                <fullName>GumGum Japan K.K.</fullName>
            </value>
            <value>
                <fullName>GumGum Australia Pty Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>