force-app/main/default/objects/Invoice_Breakout__c/fields/Expense_Status__c.field-meta.xml
<CustomField>
    <fullName>Expense_Status__c</fullName>
    <formula>text(Expense__r.Expense_Status__c)</formula>
    <label>Expense Status</label>
    <type>Text</type>
</CustomField>