force-app/main/default/objects/Invoice_Breakout__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Which region is the expense serving?</inlineHelpText>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Domestic</fullName>
                <default>true</default>
                <label>All Domestic</label>
            </value>
            <value>
                <fullName>Domestic: East</fullName>
            </value>
            <value>
                <fullName>Domestic: Midwest</fullName>
            </value>
            <value>
                <fullName>Domestic: West</fullName>
            </value>
            <value>
                <fullName>APAC: Australia</fullName>
            </value>
            <value>
                <fullName>APAC: Japan</fullName>
            </value>
            <value>
                <fullName>EMEA: United Kingdom</fullName>
            </value>
            <value>
                <fullName>All Regions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>