force-app/main/default/objects/Invoice_Breakout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense__c</columns>
    <columns>Expense_Status__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Terms__c</columns>
    <columns>Amount__c</columns>
    <columns>Invoice_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>