force-app/main/default/objects/Invoice_Breakout__c/listViews/Invoices_for_Accounting.listView-meta.xml
<ListView>
    <fullName>Invoices_for_Accounting</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Invoices for Accounting</label>
</ListView>